crates/soul-attributes/tests/ui/non_identifier_key.stderr
error: expected identifier
 --> tests/ui/non_identifier_key.rs:3:50
  |
3 | #[soul(id = "interaction.checkout.create-order", "bad-key" = "value")]
  |                                                  ^^^^^^^^^
