crates/soul-attributes/tests/ui/non_identifier_key.rs
use soul_attributes::soul;

#[soul(id = "interaction.checkout.create-order", "bad-key" = "value")]
fn annotated() {}

fn main() {}
